Changes for Filter Effects specification
----------------------------------------

2013-02-27  Dirk Schulze  <dschulze@adobe.com>
- Added interface for feCustomParam element.

2013-02-27  Dirk Schulze  <dschulze@adobe.com>
- Style clean up. Bug fixes.

2013-02-27  Dirk Schulze  <dschulze@adobe.com>
- Fix issues with drop-shadow.
  (https://www.w3.org/Bugs/Public/show_bug.cgi?id=20762)

2013-02-26  Dirk Schulze  <dschulze@adobe.com>
- Enable automatic line break for math formulas.

2013-02-26  Dirk Schulze  <dschulze@adobe.com>
- Use MathJax for representing the (now) inline MathML formulas.

2013-02-26  Dirk Schulze  <dschulze@adobe.com>
- Use image references with <img> instead of <object>.

2013-01-26  Dirk Schulze  <dschulze@adobe.com>
- Define @support condition for custom filter extensions.
- Define margin descriptor on custom filters.

2013-01-26  Dirk Schulze  <dschulze@adobe.com>
- Fixed interfaces:
  https://www.w3.org/Bugs/Public/show_bug.cgi?id=20781
  https://www.w3.org/Bugs/Public/show_bug.cgi?id=20782

2013-01-15  Dirk Schulze  <dschulze@adobe.com>
- Remove implementing of SVGTest as discussed on SVG WG meeting of 01-10-2013.

2013-01-14  Dirk Schulze  <dschulze@adobe.com>
- 0% on contrast makes the image gray, not black.
  https://www.w3.org/Bugs/Public/show_bug.cgi?id=19712

2013-01-14  Dirk Schulze  <dschulze@adobe.com>
- Corrected issue with feComponentTransfer
  https://www.w3.org/Bugs/Public/show_bug.cgi?id=20658
- Added issue about adding amount transformation function on brightness and contrast filter functions.

2013-01-13  Dirk Schulze  <dschulze@adobe.com>
- More reorganizing for better orientation.
- Distinguish between custom filter resource format and custom filter type.
- Add Media Query Feature: filter.
- Clarifications on filter functions (meaning of opacity, added more issues).

2013-01-11  Dirk Schulze  <dschulze@adobe.com>
- Reorganize chapters for a better orientation.