@@ -2341,6 +2341,24 @@ considerably smaller than a device pixel.</p>
   <p>
     <em>Attribute definitions:</em>
   </p>
+  <dl>
+    <dt id="feCustomSourceSrcAttribute">
+      <span class="adef">src</span> = "<em><a>&lt;string&gt;</a></em>"
+    </dt>
+    <dd>
+      An <a>Functional IRI reference</a> to an resource which defines the custom filter.
+      <br />
+      <span class="anim-target">Animatable: yes.</span>
+    </dd>
+    <dt id="feCustomSourceFormatAttribute">
+      <span class="adef">format</span> = "<em><a>&lt;string&gt;</a></em>"
+    </dt>
+    <dd>
+      The format of the resource referenced by the <a>feCustomSource/src</a> attribute.
+      <br />
+      <span class="anim-target">Animatable: yes.</span>
+    </dd>
+  </dl>
 </div>
 
 <p id="feCustomParamElement">
@@ -3404,7 +3422,7 @@ point, and then render the <a href="#SourceGraphic"><span
 class="attr-value">SourceGraphic</span></a> directly from its vector
 description on top.</p>
 
-<p><a href="#AnExample">The example</a> at the start of this chapter makes
+<p><a href="#introduction">The example</a> at the start of this chapter makes
 use of the <span class="element-name">feMerge</span> filter primitive to
 composite two intermediate filter results together.</p>
 
@@ -3569,7 +3587,7 @@ determine the authors intent.</p>
 </dl>
 </div>
 
-<p><a href="#AnExample">The example</a> at the start of this chapter makes
+<p><a href="#introduction">The example</a> at the start of this chapter makes
 use of the <span class="element-name">feOffset</span> filter primitive to
 offset the drop shadow from the original source graphic.</p>
 
@@ -3709,7 +3727,7 @@ in one pass, instead of two.</p>
 <a>'fePointLight'</a> or <a>'feDistantLight'</a>. The light color is
 specified by property <a>'lighting-color'</a>.</p>
 
-<p><a href="#AnExample">The example</a> at the start of this chapter makes
+<p><a href="#introduction">The example</a> at the start of this chapter makes
 use of the <span class="element-name">feSpecularLighting</span> filter
 primitive to achieve a highly reflective, 3D glowing effect.</p>
 
