@@ -331,18 +331,6 @@
   </element>
 
   <element
-      name='feUnsharpMask'
-      href='#feUnsharpMaskElement'
-      contentmodel='anyof'
-      elements='animate, set'
-      attributecategories='core, style, presentation, filter primitive'
-      interfaces='SVGFETurbulenceElement'>
-    <attribute name='amount' href='#feUnsharpMaskAmountAttribute' animatable='yes'/>
-    <attribute name='threshold' href='#feUnsharpMaskThresholdAttribute' animatable='yes'/>
-    <attribute name='stdDeviation' href='#feUnsharpMaskStdDeviationAttribute' animatable='yes'/>
-  </element>
-
-  <element
       name='filter'
       href='#FilterElement'
       contentmodel='anyof'
@@ -363,14 +351,14 @@
 
   <!-- ... element categories ............................................ -->
 
-  <elementcategory name='filter primitive' href='#TermFilterPrimitiveElement' elements='feBlend, feFlood, feColorMatrix, feComponentTransfer, feComposite, feConvolveMatrix, feCustom, feDiffuseLighting, feDisplacementMap, feDropShadow, feGaussianBlur, feImage, feMerge, feMorphology, feOffset, feSpecularLighting, feTile, feTurbulence, feUnsharpMask'/>
+  <elementcategory name='filter primitive' href='#TermFilterPrimitiveElement' elements='feBlend, feFlood, feColorMatrix, feComponentTransfer, feComposite, feConvolveMatrix, feCustom, feDiffuseLighting, feDisplacementMap, feDropShadow, feGaussianBlur, feImage, feMerge, feMorphology, feOffset, feSpecularLighting, feTile, feTurbulence'/>
   <elementcategory name='light source' href='#TermLightSourceElement' elements='feDistantLight, fePointLight, feSpotLight'/>
   <elementcategory name='transfer function' href='#TermTransferFunctionElement' elements='feFuncR, feFuncG, feFuncB, feFuncA'/>
 
   <!-- ... attributes common to multiple elements ........................ -->
 
   <!-- attribute common to most filter primitives (all except feFlood feImage feMerge feTurbulence) -->
-  <attribute name='in' elements='feBlend, feColorMatrix, feComponentTransfer, feComposite, feConvolveMatrix, feCustom, feDropShadow, feDiffuseLighting, feDisplacementMap, feGaussianBlur, feMergeNode, feMorphology, feOffset, feSpecularLighting, feTile, feUnsharpMask' href='#FilterPrimitiveInAttribute' animatable='yes'/>
+  <attribute name='in' elements='feBlend, feColorMatrix, feComponentTransfer, feComposite, feConvolveMatrix, feCustom, feDropShadow, feDiffuseLighting, feDisplacementMap, feGaussianBlur, feMergeNode, feMorphology, feOffset, feSpecularLighting, feTile' href='#FilterPrimitiveInAttribute' animatable='yes'/>
 
   <!-- ... attribute categories .......................................... -->
 
@@ -447,7 +435,6 @@
   <interface name='SVGFESpecularLightingElement' href='#InterfaceSVGFESpecularLightingElement'/>
   <interface name='SVGFETileElement' href='#InterfaceSVGFETileElement'/>
   <interface name='SVGFETurbulenceElement' href='#InterfaceSVGFETurbulenceElement'/>
-  <interface name='SVGFEUnsharpMaskElement' href='#InterfaceSVGFEUnsharpMaskElement'/>
   <interface name='SVGDefinitionElement' href='http://www.w3.org/TR/2012/WD-SVG2-20120828/types.html#InterfaceSVGDefinitionElement'/>
   <interface name='ImageData' href='http://www.w3.org/TR/2012/WD-2dcontext-20121025/#imagedata'/>
 
