@@ -1269,9 +1269,7 @@
         href="#feTileElement"><span
         class=element-name>‘feTile’</span></a>, <a
         href="#feTurbulenceElement"><span
-        class=element-name>‘feTurbulence’</span></a>, <a
-        href="#feUnsharpMaskElement"><span
-        class=element-name>‘feUnsharpMask’</span></a></span>
+        class=element-name>‘feTurbulence’</span></a></span>
 
        <li><a
         href="http://www.w3.org/TR/2011/REC-SVG11-20110816/animate.html#AnimateElement"><span
@@ -5505,6 +5503,22 @@ A' = <a
 
       <div class=adef-list>
        <p> <em>Attribute definitions:</em>
+
+       <dl>
+        <dt id=feCustomSourceSrcAttribute> <a class=adef href="#src">src</a>
+         = "<em><span class=xxx>&lt;string&gt;</span></em>"
+
+        <dd> An <span class=xxx>Functional IRI reference</span> to an
+         resource which defines the custom filter. <br>
+         <span class=anim-target>Animatable: yes.</span>
+
+        <dt id=feCustomSourceFormatAttribute> <span class=adef>format</span>
+         = "<em><span class=xxx>&lt;string&gt;</span></em>"
+
+        <dd> The format of the resource referenced by the <span
+         class=xxx>feCustomSource/src</span> attribute. <br>
+         <span class=anim-target>Animatable: yes.</span>
+       </dl>
       </div>
 
       <p id=feCustomParamElement> Each ‘<a href="#fecustom"><code
@@ -8433,7 +8447,7 @@ A' = <a
        class=attr-value>SourceGraphic</span></a> directly from its vector
        description on top.
 
-      <p><a href="#AnExample">The example</a> at the start of this chapter
+      <p><a href="#introduction">The example</a> at the start of this chapter
        makes use of the <a class=element-name href="#femerge">feMerge</a>
        filter primitive to composite two intermediate filter results
        together.
@@ -9047,7 +9061,7 @@ A' = <a
        </dl>
       </div>
 
-      <p><a href="#AnExample">The example</a> at the start of this chapter
+      <p><a href="#introduction">The example</a> at the start of this chapter
        makes use of the <a class=element-name href="#feoffset">feOffset</a>
        filter primitive to offset the drop shadow from the original source
        graphic.
@@ -9424,7 +9438,7 @@ A' = <a
        href="#LightingColorProperty">‘<code
        class=property>lighting-color</code>’</a>.
 
-      <p><a href="#AnExample">The example</a> at the start of this chapter
+      <p><a href="#introduction">The example</a> at the start of this chapter
        makes use of the <a class=element-name
        href="#fespecularlighting">feSpecularLighting</a> filter primitive to
        achieve a highly reflective, 3D glowing effect.
