@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-02-28  Dirk Schulze  <dschulze@adobe.com>
+- Added attribute description to feCustomSource element.
+
 2013-02-27  Dirk Schulze  <dschulze@adobe.com>
 - Added interface for feCustomParam element.
 
